--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/qs": "^6.5.3",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "element-ui": "^2.9.1",
+    "qs": "^6.7.0",
     "vue": "^2.6.10",
     "vue-axios": "^2.1.4",
     "vue-router": "^3.0.6"
